--- a/mercadopreso/index.html
+++ b/mercadopreso/index.html
@@ -1,9 +1,10 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
   <head>
+    <link rel="icon" type="image/png" href="./src/img/icon.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mercado Preso :) </title>
+    <title>Mercado Preso :)</title>
   </head>
   <body>
     <div id="root"></div>
